# aoc-2019-py

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  d01.py  d03.py  d04.py  d06.py  pyproject.toml
aoc/: d01.py  d02.py  d03.py  d04.py  d05.py  d06.py  d07.py  d08.py  d09.py  d10.py  d11.py  d12.py  d13.py  d14.py  d15.py  d16.py  d17.py  d24.py  intcode.py  utils.py
tests/: test_d01.py  test_d02.py  test_d03.py  test_d04.py  test_d06.py  test_d07.py  test_d08.py  test_d10.py  test_d12.py  test_d14.py  test_d16.py  test_d24.py  test_intcode.py
