[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Mathieu Lemay <mathieu.lemay@broadsign.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pre-commit = "^1.18.3"
coverage = "^4.5.4"

[tool.black]
line-length = 120
target-version = ['py37', 'py38']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
